[package]
name = "max7219-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
embedded-hal-async = { version = "=0.2.0-alpha.0" }
embedded-graphics-core = "0.3.3"
heapless = "0.7"
